ci: fixed secret name from GH_TOKEN to GITHUB_TOKEN

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -9,7 +9,6 @@ on:
 
 env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
   release:
@@ -33,3 +32,5 @@ jobs:
         run: pnpm run build
       - name: Publish
         run: pnpm exec semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
