build: updated npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,20 @@
 src/
+scripts/
 test/
-.husky/
-.github/
 coverage/
 assets/
-cc-reporter*
+.husky/
+.github/
 .env*
 pnpm-lock.yaml
-tsconfig.json
 .eslintcache
-CONTRIBUTING.md
-CODE_OF_CONDUCT.md
+.commitlintrc.json
+.cz.json
+.eslintignore
+.eslintrc.json
+.lintstagedrc.json
+.nvmrc
+.prettierrc.json
+.releaserc.json
+renovate.json
+tsconfig.json
